# rust-examples-microbit-2024

./: README.md
ex1_hello/: Cargo.toml
ex1_hello/src/: main.rs
ex2_led_carousel/: Cargo.toml  Embed.toml
ex2_led_carousel/src/: main.rs
ex3_serial_buttons/: Cargo.toml  Embed.toml
ex3_serial_buttons/src/: main.rs
ex4_accelerometer/: Cargo.toml
ex4_accelerometer/src/: main.rs
ex5_accel_mouse/: Cargo.toml  memory.x
ex5_accel_mouse/.cargo/: config.toml
ex5_accel_mouse/src/: keyboard.rs  main.rs  mouse.rs
