[package]
name = "ex1"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
heapless = "0.8.0"
lsm303agr = "1.0.0"
microbit = { version = "0.14.0", features = ["embedded-hal-02"] }
nb = "1.1.0"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"
